--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -7,8 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aloha</h1>
+    <h1>Aloha Django Gurl</h1>
     <h2>It works!</h2>
+
+    {% for post in posts %}
+        <article>
+            <time>published: {{ post.published_date }}</time>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }} </p>
+        </article>
+    {% endfor %}
     
 </body>
 </html>
